# lynx

./: .gitignore  CHANGELOG.md  CNAME  Makefile  README.md  SECURITY.md  features.html  index.html  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: 02-policy-language.md  cli.md  concepts.md  cookbook.md  faq.md  integration-cookbook.md  roadmap.md  v2-rfc.md  what-lynx-is-and-isnt.md
examples/: 01_hello_allow.py  02_block_dangerous.py  03_preview_writes.py  04_human_approval.py  05_real_llm_blocked.py  06_compliance_audit.py  06_streaming_to_jsonl.py  07_refund_workflow.py  08_sql_transform.py  09_fastapi_service.py  10_devops_assistant.py  11_flask_service.py  12_django_service.py  18_sandboxed_tool.py  23_compile_errors.py  24_durable_resume.py  25_token_budget.py  27_handoff_graph.py  28_full_stack_pipeline.py  29_memory_gating.py  30_cost_attribution.py  31_kill_switch.py  32_token_optimization.py  33_subagents.py  34_mcp_proxy.py  35_multi_provider.py  36_fastmcp_governed.py  37_tamper_evident_audit.py  38_otel_audit.py  39_layered_policy.py  40_framework_native_governance.py  41_obligations.py  README.md
src/gazelle/: decorators.py  observability.py  sdk.py
src/gazelle/adapters/: crewai_adapter.py  langgraph_adapter.py  mcp.py  openai_sdk.py
src/gazelle/cli/: main.py
src/gazelle/core/: mediator.py  policy.py  scheduler.py  types.py
src/gazelle/shadows/: http.py  sql.py
src/gazelle/stores/: postgres.py  sqlite.py
src/lynx/: __init__.py  cancel.py  compressors.py  decorators.py  durability.py  executors.py  graph.py  policy.py  sandbox.py  sdk.py  sinks.py
src/lynx/adapters/: anthropic_sdk.py  crewai_adapter.py  langgraph_adapter.py  mcp.py  openai_compat.py  openai_sdk.py
src/lynx/cli/: main.py
src/lynx/core/: mediator.py  policy.py  scheduler.py  types.py
src/lynx/integrations/: __init__.py  core.py  openai_agents.py
src/lynx/proxy/: __init__.py  mcp_proxy.py
tests/: mcp_live_proxy.py  mcp_live_upstream.py  test_adapters.py  test_cancel.py  test_cli.py  test_compressors.py  test_durability.py  test_executors.py  test_fastmcp_proxy.py  test_graph.py  test_hash_chain.py  test_integrations.py  test_layered_policy.py  test_mcp_proxy.py  test_mcp_proxy_live.py  test_obligations.py  test_openai_compat.py  test_otel_sink.py  test_policy.py  test_release_hygiene.py  test_resume.py  test_run_agent.py  test_sandbox.py  test_types.py  test_usage.py
