[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "lynx-agent"
description = "A stateless, type-safe policy kernel for AI agent tool calls. Pure functions, immutable values, streaming events to user-owned sinks. No database. No globals."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Lynx contributors" }]
keywords = [
    "ai",
    "agents",
    "llm",
    "policy",
    "policy-engine",
    "governance",
    "streaming-events",
    "agentic",
    "claude",
    "openai",
    "langgraph",
    "crewai",
    "mcp",
    "lynx",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "hypothesis>=6.100",
    "build>=1.2",
    "twine>=5.0",
]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.40"]
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.40"]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-api>=1.20"]
all = [
    "anthropic>=0.30",
    "openai>=1.40",
    "langgraph>=0.2",
    "crewai>=0.40",
    "mcp>=1.0",
    "opentelemetry-api>=1.20",
]

[project.scripts]
lynx = "lynx.cli.main:cli"

[project.urls]
Homepage = "https://github.com/hadihonarvar/lynx"
Repository = "https://github.com/hadihonarvar/lynx"
Documentation = "https://github.com/hadihonarvar/lynx/tree/main/docs"
Issues = "https://github.com/hadihonarvar/lynx/issues"
Changelog = "https://github.com/hadihonarvar/lynx/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/lynx-agent/"
Releases = "https://github.com/hadihonarvar/lynx/releases"

[tool.hatch.version]
path = "src/lynx/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lynx"]

[tool.hatch.build.targets.sdist]
include = [
    "src/lynx",
    "tests",
    "docs",
    "examples",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    "pyproject.toml",
    "Makefile",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017", "RUF012"]
"examples/*" = ["RUF001", "RUF002", "RUF012"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src/lynx"]
branch = true
omit = [
    "src/lynx/adapters/*",
    "src/lynx/cli/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
